pull the select code to a separate component, fix styles on small screens

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   position: relative;
+  margin: 10px;
   padding: 20px;
 }
 
@@ -19,4 +20,17 @@
   border: 1px solid white;
   color: white;
   background-color: #282c34;
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .header > select {
+    position: relative;
+    top: 0px;
+    right: 0px;
+  }
 }
